--- a/projectapk/front/organized/pubspec.yaml
+++ b/projectapk/front/organized/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   device_preview: ^1.3.1
+  file_picker: ^10.3.8
 
 dev_dependencies:
   flutter_test:
